--- a/frontend/src/pages/PesquisaPacientesPage.css
+++ b/frontend/src/pages/PesquisaPacientesPage.css
@@ -3,7 +3,7 @@
     max-width: 1200px;
     margin: 2rem auto;
     padding: 2rem;
-    background-color: #fff;
+    background-color: #F4F7F9;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
